--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -52,6 +52,29 @@ jobs:
     steps:
     - uses: actions/checkout@v4
 
+    - name: Cache and install apt packages
+      if: matrix.os == 'ubuntu-latest'
+      uses: awalsh128/cache-apt-pkgs-action@latest
+      with:
+        packages: pkgconf uuid-dev wayland-protocols libxkbcommon-dev libdecor-0-dev libvulkan-dev libspirv-cross-c-shared-dev glslang-tools
+        version: 1.0
+
+    - name: Install Vulkan SDK on Windows
+      if: matrix.os == 'windows-latest'
+      shell: powershell
+      run: |
+        # Télécharger le SDK Vulkan
+        $vulkanSdkUrl = "https://sdk.lunarg.com/sdk/download/latest/windows/vulkan-sdk.exe"
+        $vulkanSdkPath = "$env:RUNNER_TEMP\vulkan-sdk.exe"
+        Invoke-WebRequest -Uri $vulkanSdkUrl -OutFile $vulkanSdkPath
+
+        # Installer le SDK Vulkan en mode silencieux
+        Start-Process -FilePath $vulkanSdkPath -ArgumentList "/S" -NoNewWindow -Wait
+
+        # Ajouter le SDK Vulkan au PATH
+        $vulkanSdkDir = "C:\VulkanSDK\*\Bin"
+        Add-Content -Path $env:GITHUB_PATH -Value $vulkanSdkDir
+
     - name: Set reusable strings
       # Turn repeated input strings (such as the build output directory) into step outputs. These step outputs can be used throughout the workflow file.
       id: strings
