--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -65,6 +65,7 @@ jobs:
       with:
         vulkan-components: Vulkan-Headers, Vulkan-Loader
         vulkan-use-cache: true
+        vulkan-query-version: latest
 
     - name: Set reusable strings
       # Turn repeated input strings (such as the build output directory) into step outputs. These step outputs can be used throughout the workflow file.
