--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -34,7 +34,7 @@
 			"type": "lldb",
 			"request": "launch",
 			"program": "${command:cmake.launchTargetDirectory}/HodEditor",
-			"args": ["--ProjectPath", "/home/glordim/Dev/Pong/Pong.hod"],
+			//"args": ["--ProjectPath", "/home/glordim/Dev/Pong/Pong.hod"],
 			"console": "integratedTerminal",
 			"preLaunchTask": "Build Target",
 		},
@@ -43,7 +43,7 @@
 			"type": "lldb",
 			"request": "launch",
 			"program": "${command:cmake.launchTargetDirectory}/HodEditor",
-			"args": ["--ProjectPath", "/Users/anthony/Dev/Pong/Pong.hod"],
+			//"args": ["--ProjectPath", "/Users/anthony/Dev/Pong/Pong.hod"],
 			"console": "integratedTerminal",
 			"preLaunchTask": "Build Target",
 		},
@@ -52,7 +52,7 @@
 			"type": "cppvsdbg",
 			"request": "launch",
 			"program": "${command:cmake.launchTargetDirectory}/HodEditor.exe",
-			"args": ["--ProjectPath", "E:/Pong/Pong.hod"],
+			//"args": ["--ProjectPath", "E:/Pong/Pong.hod"],
 			"stopAtEntry": false,
 			//"cwd": "E:/Pong/Pong.hod",
 			"environment": [],
