Android Fix Arm link

--- a/Sources/HodEngine/Renderer/CMakeLists.txt
+++ b/Sources/HodEngine/Renderer/CMakeLists.txt
@@ -8,8 +8,10 @@ project(Renderer LANGUAGES CXX)
 if (NOT ANDROID)
   find_package(Vulkan REQUIRED)
 else()
+  find_library(vulkan-lib vulkan)
+  find_library(zlib-lib z)
   set(Vulkan_INCLUDE_DIRS ${ANDROID_NDK}/toolchains/llvm/prebuilt/windows-x86_64/sysroot/usr/include) # TODO
-  set(Vulkan_LIBRARIES ${ANDROID_NDK}/toolchains/llvm/prebuilt/windows-x86_64/sysroot/usr/lib/x86_64-linux-android/33/libvulkan.so ${ANDROID_NDK}/toolchains/llvm/prebuilt/windows-x86_64/sysroot/usr/lib/x86_64-linux-android/libz.a) # TODO
+  set(Vulkan_LIBRARIES ${vulkan-lib} ${zlib-lib}) # TODO
 endif()
 else()
 project(Renderer LANGUAGES CXX OBJCXX)
