Physics: Remove Renderer deps

--- a/Sources/HodEngine/Physics/CMakeLists.txt
+++ b/Sources/HodEngine/Physics/CMakeLists.txt
@@ -17,11 +17,10 @@ add_library(Physics ${LIB_TYPE} ${Srcs} ${Includes})
 target_precompile_headers(Physics PRIVATE "Pch.hpp")
 set_property(TARGET Physics PROPERTY MSVC_RUNTIME_LIBRARY "MultiThreadedDLL")
 
-add_dependencies(Physics Core Renderer box2d) #Remove Renderer dep
+add_dependencies(Physics Core box2d)
 
 target_link_libraries(Physics
 	Core
-	Renderer
 	${box2d_LIBRARIES}
 )
 
