UI: Add CustomEditor for Node

--- a/Sources/HodEngine/Application/CMakeLists.txt
+++ b/Sources/HodEngine/Application/CMakeLists.txt
@@ -24,7 +24,7 @@ add_library(Application ${LIB_TYPE} ${Srcs} ${Includes})
 target_precompile_headers(Application PRIVATE "Pch.hpp")
 set_property(TARGET Application PROPERTY MSVC_RUNTIME_LIBRARY "MultiThreadedDLL")
 
-add_dependencies(Application Core Audio Window Renderer Input Physics Game ImGui)
+add_dependencies(Application Core Audio Window Renderer Input Physics Game ImGui UI)
 get_target_property(Core_INCLUDES Core INCLUDE_DIRECTORIES)
 get_target_property(Window_INCLUDES Window INCLUDE_DIRECTORIES)
 get_target_property(Renderer_INCLUDES Renderer INCLUDE_DIRECTORIES)
@@ -45,6 +45,7 @@ target_link_libraries(Application
 	Physics
 	Game
 	ImGui
+	UI
 )
 
 if (ANDROID)
