--- a/Sources/HodEngine/Physics/CMakeLists.txt
+++ b/Sources/HodEngine/Physics/CMakeLists.txt
@@ -10,18 +10,18 @@ assign_source_group(${Srcs}) # for VS
 
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}
 	"../.."
-	${box2d_INCLUDE_DIRS}
+	Box2d::Box2d
 )
 
 add_library(Physics ${LIB_TYPE} ${Srcs} ${Includes})
 target_precompile_headers(Physics PRIVATE "Pch.hpp")
 set_property(TARGET Physics PROPERTY MSVC_RUNTIME_LIBRARY "MultiThreadedDLL")
 
-add_dependencies(Physics Core box2d)
+add_dependencies(Physics Core Box2d::Box2d)
 
 target_link_libraries(Physics
 	Core
-	${box2d_LIBRARIES}
+	Box2d::Box2d
 )
 
 target_compile_definitions(Physics PUBLIC ${PLATFORM_DEFINE})
