ThirdParty: Move Freetype, glslang, spirvcross

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -58,98 +58,6 @@ if (WIN32)
 add_compile_definitions(_CRT_SECURE_NO_WARNINGS)
 endif()
 
-set(freetype_INCLUDE_DIRS ${CMAKE_BINARY_DIR}/_deps/freetype-src/include)
-set(freetype_LIBRARIES ${CMAKE_BINARY_DIR}/_deps/freetype-build/${LIB_SUB_FOLDER}/${LIB_PREFIX}freetype.${LIB_EXTENSION})
-
-ExternalProject_Add(freetype
-  URL https://github.com/freetype/freetype/archive/refs/tags/VER-2-13-2.zip
-  DOWNLOAD_DIR ${DOWNLOAD_CACHE_DIR}
-  SOURCE_DIR ${CMAKE_BINARY_DIR}/_deps/freetype-src
-  BINARY_DIR ${CMAKE_BINARY_DIR}/_deps/freetype-build
-  CMAKE_ARGS
-    -DFT_DISABLE_BROTLI=ON
-    -DFT_DISABLE_HARFBUZZ=ON
-    -DFT_DISABLE_PNG=ON
-    -DFT_DISABLE_BZIP2=ON
-    -DFT_DISABLE_ZLIB=ON
-    -DCMAKE_POSITION_INDEPENDENT_CODE=ON
-    -DCMAKE_OSX_DEPLOYMENT_TARGET=14 #TODO only on MacOs platform
-    -DCMAKE_POSITION_INDEPENDENT_CODE=ON
-    -DCMAKE_TOOLCHAIN_FILE=${CMAKE_TOOLCHAIN_FILE}
-    -DANDROID_ABI=${ANDROID_ABI}
-    -DANDROID_PLATFORM=${ANDROID_PLATFORM}
-    -DCMAKE_BUILD_TYPE=Release
-    -G ${CMAKE_GENERATOR}
-  BUILD_COMMAND 
-    ${CMAKE_COMMAND} --build ${CMAKE_BINARY_DIR}/_deps/freetype-build --config Release --parallel
-  INSTALL_COMMAND ""
-  BUILD_BYPRODUCTS ${freetype_LIBRARIES}
-)
-
-message(STATUS "freetype is available in " ${freetype_INCLUDE_DIRS})
-message(STATUS "freetype is available in " ${freetype_LIBRARIES})
-
-set(msdfgen_INCLUDE_DIRS ${CMAKE_BINARY_DIR}/_deps/msdfgen-src/include)
-set(msdfgen_LIBRARIES ${CMAKE_BINARY_DIR}/_deps/msdfgen-build/${LIB_SUB_FOLDER}/${LIB_PREFIX}msdfgen-core.${LIB_EXTENSION})
-
-ExternalProject_Add(msdfgen
-  URL https://github.com/Chlumsky/msdfgen/archive/refs/tags/v1.12.zip
-  DOWNLOAD_DIR ${DOWNLOAD_CACHE_DIR}
-  SOURCE_DIR ${CMAKE_BINARY_DIR}/_deps/msdfgen-src
-  BINARY_DIR ${CMAKE_BINARY_DIR}/_deps/msdfgen-build
-  CMAKE_ARGS
-    -DMSDFGEN_CORE_ONLY=ON
-    -DMSDFGEN_BUILD_STANDALONE=OFF
-    -DMSDFGEN_USE_VCPKG=OFF
-    -DCMAKE_POSITION_INDEPENDENT_CODE=ON
-    -DCMAKE_OSX_DEPLOYMENT_TARGET=14 #TODO only on MacOs platform
-    -DCMAKE_TOOLCHAIN_FILE=${CMAKE_TOOLCHAIN_FILE}
-    -DANDROID_ABI=${ANDROID_ABI}
-    -DANDROID_PLATFORM=${ANDROID_PLATFORM}
-    -DCMAKE_BUILD_TYPE=Release
-    -G ${CMAKE_GENERATOR}
-  BUILD_COMMAND 
-    ${CMAKE_COMMAND} --build ${CMAKE_BINARY_DIR}/_deps/msdfgen-build --config Release --parallel
-  INSTALL_COMMAND ""
-  BUILD_BYPRODUCTS ${msdfgen_LIBRARIES}
-)
-
-message(STATUS "msdfgen is available in " ${msdfgen_INCLUDE_DIRS})
-message(STATUS "msdfgen is available in " ${msdfgen_LIBRARIES})
-
-# TODO move in Renderer CmakeList (only with Vulkan) ? 
-
-set(glslang_INCLUDE_DIRS ${CMAKE_BINARY_DIR}/_deps/glslang-src)
-set(glslang_LIBRARIES ${CMAKE_BINARY_DIR}/_deps/glslang-build/glslang/${LIB_SUB_FOLDER}/${LIB_PREFIX}glslang.${LIB_EXTENSION} ${CMAKE_BINARY_DIR}/_deps/glslang-build/glslang/${LIB_SUB_FOLDER}/${LIB_PREFIX}glslang-default-resource-limits.${LIB_EXTENSION})
-
-ExternalProject_Add(glslang
-  URL https://github.com/KhronosGroup/glslang/archive/refs/tags/15.0.0.zip
-  DOWNLOAD_DIR ${DOWNLOAD_CACHE_DIR}
-  SOURCE_DIR ${CMAKE_BINARY_DIR}/_deps/glslang-src
-  BINARY_DIR ${CMAKE_BINARY_DIR}/_deps/glslang-build
-  CMAKE_ARGS
-    -DGLSLANG_TESTS=OFF
-    -DBUILD_EXTERNAL=OFF
-    -DENABLE_SPIRV=ON
-    -DENABLE_HLSL=OFF
-    -DENABLE_SPVREMAPPER=OFF
-    -DENABLE_GLSLANG_BINARIES=OFF
-    -DENABLE_OPT=OFF
-    -DCMAKE_POSITION_INDEPENDENT_CODE=ON
-    -DCMAKE_TOOLCHAIN_FILE=${CMAKE_TOOLCHAIN_FILE}
-    -DANDROID_ABI=${ANDROID_ABI}
-    -DANDROID_PLATFORM=${ANDROID_PLATFORM}
-    -DCMAKE_BUILD_TYPE=Release
-    -G ${CMAKE_GENERATOR}
-  BUILD_COMMAND 
-    ${CMAKE_COMMAND} --build ${CMAKE_BINARY_DIR}/_deps/glslang-build --config Release --parallel
-  INSTALL_COMMAND ""
-  BUILD_BYPRODUCTS ${glslang_LIBRARIES}
-)
-
-message(STATUS "glslang is available in " ${glslang_INCLUDE_DIRS})
-message(STATUS "glslang is available in " ${glslang_LIBRARIES})
-
 ExternalProject_Add(VulkanMemoryAllocator
   URL https://github.com/GPUOpen-LibrariesAndSDKs/VulkanMemoryAllocator/archive/refs/tags/v3.1.0.zip
   DOWNLOAD_DIR ${DOWNLOAD_CACHE_DIR}
@@ -171,37 +79,6 @@ set(VulkanMemoryAllocator_INCLUDE_DIRS ${CMAKE_BINARY_DIR}/_deps/VulkanMemoryAll
 message(STATUS "VulkanMemoryAllocator is available in " ${VulkanMemoryAllocator_INCLUDE_DIRS})
 message(STATUS "VulkanMemoryAllocator is available in " ${VulkanMemoryAllocator_LIBRARIES})
 
-set(SpirvCross_INCLUDE_DIRS ${CMAKE_BINARY_DIR}/_deps/SpirvCross-src)
-set(SpirvCross_LIBRARIES ${CMAKE_BINARY_DIR}/_deps/SpirvCross-build/${LIB_SUB_FOLDER}/${LIB_PREFIX}spirv-cross-core.${LIB_EXTENSION})
-
-ExternalProject_Add(SpirvCross
-  URL https://github.com/KhronosGroup/SPIRV-Cross/archive/refs/tags/vulkan-sdk-1.3.275.0.zip
-  DOWNLOAD_DIR ${DOWNLOAD_CACHE_DIR}
-  SOURCE_DIR ${CMAKE_BINARY_DIR}/_deps/SpirvCross-src
-  BINARY_DIR ${CMAKE_BINARY_DIR}/_deps/SpirvCross-build
-  CMAKE_ARGS
-    -DSPIRV_CROSS_CLI=OFF
-    -DSPIRV_CROSS_ENABLE_TESTS=OFF
-    -DSPIRV_CROSS_ENABLE_HLSL=OFF
-    -DSPIRV_CROSS_ENABLE_MSL=OFF
-    -DSPIRV_CROSS_ENABLE_CPP=OFF
-    -DSPIRV_CROSS_EXCEPTIONS_TO_ASSERTIONS=ON
-    -DCMAKE_POSITION_INDEPENDENT_CODE=ON
-    -DCMAKE_TOOLCHAIN_FILE=${CMAKE_TOOLCHAIN_FILE}
-    -DANDROID_ABI=${ANDROID_ABI}
-    -DANDROID_PLATFORM=${ANDROID_PLATFORM}
-    -DCMAKE_BUILD_TYPE=Release
-    -DCMAKE_UNITY_BUILD=ON
-    -G ${CMAKE_GENERATOR}
-  BUILD_COMMAND
-    ${CMAKE_COMMAND} --build ${CMAKE_BINARY_DIR}/_deps/SpirvCross-build --config Release --parallel
-  INSTALL_COMMAND ""
-  BUILD_BYPRODUCTS ${SpirvCross_LIBRARIES}
-)
-
-message(STATUS "SpirvCross is available in " ${SpirvCross_INCLUDE_DIRS})
-message(STATUS "SpirvCross is available in " ${SpirvCross_LIBRARIES})
-
 if(WIN32)
     if(CMAKE_SYSTEM_PROCESSOR STREQUAL "AMD64")
         set(ARCH_FOLDER "Win_${CMAKE_GENERATOR_PLATFORM}")
@@ -218,7 +95,30 @@ set(THIRDPARTY_ROOT "${CMAKE_CURRENT_SOURCE_DIR}/ThirdParty/Install/${ARCH_FOLDE
 
 add_library(Box2d::Box2d STATIC IMPORTED GLOBAL)
 set_target_properties(Box2d::Box2d PROPERTIES
-    IMPORTED_LOCATION "${THIRDPARTY_ROOT}/lib/box2d.lib"
+    IMPORTED_LOCATION "${THIRDPARTY_ROOT}/lib/${LIB_PREFIX}box2d.${LIB_EXTENSION}"
+    INTERFACE_INCLUDE_DIRECTORIES "${THIRDPARTY_ROOT}/include"
+)
+
+add_library(Freetype::Freetype STATIC IMPORTED GLOBAL)
+set_target_properties(Freetype::Freetype PROPERTIES
+    IMPORTED_LOCATION "${THIRDPARTY_ROOT}/lib/${LIB_PREFIX}freetype.${LIB_EXTENSION}"
+    INTERFACE_INCLUDE_DIRECTORIES "${THIRDPARTY_ROOT}/include/freetype2"
+)
+
+add_library(Glslang::Glslang STATIC IMPORTED GLOBAL)
+set_target_properties(Glslang::Glslang PROPERTIES
+    IMPORTED_LOCATION "${THIRDPARTY_ROOT}/lib/${LIB_PREFIX}glslang.${LIB_EXTENSION}"
+    INTERFACE_INCLUDE_DIRECTORIES "${THIRDPARTY_ROOT}/include"
+)
+add_library(Glslang::GlslangDefaultResource STATIC IMPORTED GLOBAL)
+set_target_properties(Glslang::GlslangDefaultResource PROPERTIES
+    IMPORTED_LOCATION "${THIRDPARTY_ROOT}/lib/${LIB_PREFIX}glslang-default-resource-limits.${LIB_EXTENSION}"
+    INTERFACE_INCLUDE_DIRECTORIES "${THIRDPARTY_ROOT}/include"
+)
+
+add_library(SpirvCross::SpirvCross STATIC IMPORTED GLOBAL)
+set_target_properties(SpirvCross::SpirvCross PROPERTIES
+    IMPORTED_LOCATION "${THIRDPARTY_ROOT}/lib/${LIB_PREFIX}spirv-cross-core.${LIB_EXTENSION}"
     INTERFACE_INCLUDE_DIRECTORIES "${THIRDPARTY_ROOT}/include"
 )
 
